final changes added

--- a/HTML-CSS Assignment/main.html
+++ b/HTML-CSS Assignment/main.html
@@ -61,9 +61,9 @@
                   </div>
 
                   <div class="grid-item" id="5">
-                      <img src="quote.png">
+                      <img src="quote.png" align>
                       <p>From pocket-friendly to ultra -luxe residences</p>
-                      <p>What'syour pick?</p>
+                      <p>What's your pick?</p>
 
                   </div>
 
@@ -179,7 +179,7 @@
                 <p id="bottom">Copyright @ 2008-2018 all right reserved.</p>
             
             </div>
-              <hr id="line"> 
+              <hr id="line" coloe="black"> 
         </footer>
              
     </body>
