--- a/HTML-CSS Assignment/main.html
+++ b/HTML-CSS Assignment/main.html
@@ -45,8 +45,8 @@
 
                   </div>
 
-                  <div class="grid-item" id="2">
-
+                  <div class="grid-item" id="2" style="">
+                      
                   </div>
 
                   <div class="grid-item" id="3">
