added black hr line in footer

--- a/HTML-CSS Assignment/main.html
+++ b/HTML-CSS Assignment/main.html
@@ -179,7 +179,7 @@
                 <p id="bottom">Copyright @ 2008-2018 all right reserved.</p>
             
             </div>
-              <hr id="line" coloe="black"> 
+              <hr id="line" color="black"> 
         </footer>
              
     </body>
